--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-The begining
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alxndr Cloud and AI Solutions</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicons/favicon-48x48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64x64.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/favicons/favicon-128x128.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicons/favicon-256x256.png" />
+
+    <style>
+        body {
+            font-family: Helvetica, Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #EDEDED;
+            color: #4A4A4A;
+            flex-direction: column;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin: 0;
+            color: #3C3C3C;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Alexander</h1>
+    <h2>Cloud & AI Solutions</h2>
+</body>
+
+</html>
