Add initial stylesheet for Leaflet map components

--- a/index.html
+++ b/index.html
@@ -1,42 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-beasties-container>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alxndr Cloud and AI Solutions</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="/favicons/favicon-48x48.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64x64.png" />
-    <link rel="icon" type="image/png" sizes="128x128" href="/favicons/favicon-128x128.png" />
-    <link rel="icon" type="image/png" sizes="256x256" href="/favicons/favicon-256x256.png" />
-
-    <style>
-        body {
-            font-family: Helvetica, Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #EDEDED;
-            color: #4A4A4A;
-            flex-direction: column;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            margin: 0;
-            color: #3C3C3C;
-        }
-    </style>
-</head>
+  <meta charset="utf-8">
+  <title>CoordinatiA - Alxndr Cloud and AI Solutions</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicons/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64x64.png">
+  <link rel="icon" type="image/png" sizes="128x128" href="/favicons/favicon-128x128.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="/favicons/favicon-256x256.png">
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    body {
+      margin: 0;
+      font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f9fafb
+    }
+  </style>
+  <style>body{margin:0;font-family:Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background-color:#f9fafb}</style><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="all"></noscript>
+<style>body{margin:0;font-family:Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background-color:#f9fafb}</style><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-EAL7ZEU7.css"></noscript></head>
 
 <body>
-    <h1>Alexander</h1>
-    <h2>Cloud & AI Solutions</h2>
-</body>
+  <app-root></app-root>
+  <script src="polyfills-5CFQRCPP.js" type="module"></script>
+  <script src="main-C2WOMV75.js" type="module"></script>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-C2WOMV75.js" type="module"></script></body>
 
 </html>
