--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-beasties-container>
+<html lang="nl" data-beasties-container dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64x64.png">
   <link rel="icon" type="image/png" sizes="128x128" href="/favicons/favicon-128x128.png">
   <link rel="icon" type="image/png" sizes="256x256" href="/favicons/favicon-256x256.png">
-  <base href="/">
+  <base href="/nl/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
@@ -27,6 +27,6 @@
   <app-root></app-root>
   <script src="polyfills-5CFQRCPP.js" type="module"></script>
   <script src="main-C2WOMV75.js" type="module"></script>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-C2WOMV75.js" type="module"></script></body>
+<script src="polyfills-GGF7GXTK.js" type="module"></script><script src="main-4L2NCDVP.js" type="module"></script></body>
 
 </html>
