add new version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="nl" data-beasties-container dir="ltr">
+<html lang="en-US" data-beasties-container dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -10,23 +10,13 @@
   <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64x64.png">
   <link rel="icon" type="image/png" sizes="128x128" href="/favicons/favicon-128x128.png">
   <link rel="icon" type="image/png" sizes="256x256" href="/favicons/favicon-256x256.png">
-  <base href="/nl/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    body {
-      margin: 0;
-      font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      background-color: #f9fafb
-    }
-  </style>
-  <style>body{margin:0;font-family:Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background-color:#f9fafb}</style><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="all"></noscript>
 <style>body{margin:0;font-family:Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background-color:#f9fafb}</style><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-EAL7ZEU7.css"></noscript></head>
 
 <body>
   <app-root></app-root>
-  <script src="polyfills-5CFQRCPP.js" type="module"></script>
-  <script src="main-C2WOMV75.js" type="module"></script>
-<script src="polyfills-GGF7GXTK.js" type="module"></script><script src="main-4L2NCDVP.js" type="module"></script></body>
+<script src="polyfills-2KFTG4T5.js" type="module"></script><script src="main-Y63VXQ4M.js" type="module"></script></body>
 
 </html>
