--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-US" data-beasties-container dir="ltr">
+<html lang="nl" data-beasties-container dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -13,10 +13,22 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>body{margin:0;font-family:Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background-color:#f9fafb}</style><link rel="stylesheet" href="styles-EAL7ZEU7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-EAL7ZEU7.css"></noscript></head>
+  <style>
+    body {
+      margin: 0;
+      font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f9fafb
+    }
+  </style>
+  <link rel="stylesheet" href="styles-EAL7ZEU7.css" media="print" onload="this.media='all'"><noscript>
+    <link rel="stylesheet" href="styles-EAL7ZEU7.css">
+  </noscript>
+</head>
 
 <body>
   <app-root></app-root>
-<script src="polyfills-2KFTG4T5.js" type="module"></script><script src="main-Y63VXQ4M.js" type="module"></script></body>
+  <script src="polyfills-GGF7GXTK.js" type="module"></script>
+  <script src="main-BYQXE6XQ.js" type="module"></script>
+</body>
 
 </html>
